syntax = "proto3";
package powergate.admin.v1;

import "powergate/user/v1/user.proto";

option go_package = "github.com/textileio/powergate/api/gen/powergate/admin/v1;adminPb";

// Wallet
message NewAddressRequest {
  string address_type = 1;
}

message NewAddressResponse {
  string address = 1;
}

message AddressesRequest {
}

message AddressesResponse {
  repeated string addresses = 1;
}

message SendFilRequest {
  string from = 1;
  string to = 2;	
  string amount = 3;
}

message SendFilResponse {
}

// Users

message User {
  string id = 1;
  string token = 2;
}

message CreateUserRequest {
}

message CreateUserResponse {
  User user = 1;
}

message UsersRequest {
}

message UsersResponse {
  repeated User users = 1;
}

// Jobs

message ListStorageJobsRequest {
  string user_id_filter = 1;
  string cid_filter = 2;
  uint64 limit = 3;
  bool ascending = 4;
  string next_page_token = 5;
  powergate.user.v1.StorageJobsSelector selector = 6;
}

message ListStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
  bool more = 2;
  string next_page_token = 3;
}

message QueuedStorageJobsRequest {
  string user_id = 1;
  repeated string cids = 2;
}

message QueuedStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
}

message ExecutingStorageJobsRequest {
  string user_id = 1;
  repeated string cids = 2;
}

message ExecutingStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
}

message LatestFinalStorageJobsRequest {
  string user_id = 1;
  repeated string cids = 2;
}

message LatestFinalStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
}

message LatestSuccessfulStorageJobsRequest {
  string user_id = 1;
  repeated string cids = 2;
}

message LatestSuccessfulStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
}

message StorageJobsSummaryRequest {
  string user_id = 1;
  repeated string cids = 2;
}


message StorageJobsSummaryResponse {
  powergate.user.v1.JobCounts job_counts = 1;
  repeated powergate.user.v1.StorageJob queued_storage_jobs = 2;
  repeated powergate.user.v1.StorageJob executing_storage_jobs = 3;
  repeated powergate.user.v1.StorageJob latest_final_storage_jobs = 4;
  repeated powergate.user.v1.StorageJob latest_successful_storage_jobs = 5;
}

message GCStagedRequest {
}

message GCStagedResponse {
	repeated string unpinned_cids = 1;
}

message PinnedCidsRequest {
}

message PinnedCidsResponse {
	repeated HSPinnedCid cids = 1;
}

message HSPinnedCid {
	string cid = 1;
	repeated HSPinnedCidUser users = 2;
}

message HSPinnedCidUser {
	string user_id = 1;
	bool staged = 2;
	int64 created_at = 3;
}

service AdminService {
  // Wallet
  rpc NewAddress(NewAddressRequest) returns (NewAddressResponse) {}
  rpc Addresses(AddressesRequest) returns (AddressesResponse) {}
  rpc SendFil(SendFilRequest) returns (SendFilResponse) {}

  // Users
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Users(UsersRequest) returns (UsersResponse) {}

  // Jobs
  rpc ListStorageJobs(ListStorageJobsRequest) returns (ListStorageJobsResponse) {}
  rpc QueuedStorageJobs(QueuedStorageJobsRequest) returns (QueuedStorageJobsResponse) {}
  rpc ExecutingStorageJobs(ExecutingStorageJobsRequest) returns (ExecutingStorageJobsResponse) {}
  rpc LatestFinalStorageJobs(LatestFinalStorageJobsRequest) returns (LatestFinalStorageJobsResponse) {}
  rpc LatestSuccessfulStorageJobs(LatestSuccessfulStorageJobsRequest) returns (LatestSuccessfulStorageJobsResponse) {}
  rpc StorageJobsSummary(StorageJobsSummaryRequest) returns (StorageJobsSummaryResponse) {}
  rpc GCStaged(GCStagedRequest) returns (GCStagedResponse) {}
  rpc PinnedCids(PinnedCidsRequest) returns (PinnedCidsResponse) {}
}
